Modulo gestion usuarios

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -9,9 +9,13 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
+      <ion-title size="large">Hoja 1</ion-title>
     </ion-toolbar>
   </ion-header>
+ <h1>Hola Mundo</h1>
+ <form action="" method="POST">
+<input type="text" name="nombre">
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+ </form>
+  <app-explore-container name="Tabulador 1 page"></app-explore-container>
 </ion-content>
