--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -12,7 +12,7 @@
       <ion-title size="large">Hoja 12</ion-title>
     </ion-toolbar>
   </ion-header>
- <h1>Hola Mundo</h1>
+ <h1>Hola Mundooooooo</h1>
  <form action="" method="POST">
 <input type="text" name="nombre">
 
